# mochi_agent

./: .gitignore  README.md  enter-win.ps1  goal-workflow-handoff-2026-06-25.md  implementation_plan.md  pyproject.toml  run_best_combo.py
configs/: default.yaml
documents/architecture/: 2026-06-17-sglang-tensorrt-llm-external-provider-preset-plan.md
mochi/: __init__.py  goal_intent.py  goal_proposal_copy.py  main.py  terminal_goal_helpers.py
mochi/agents/: __init__.py  compaction.py  context.py  context_snapshot.py  engine.py  events.py  invocation.py  prompt_builder.py  react_loop.py  tool_exposure.py  tool_intent_router.py
mochi/api/: __init__.py  attachment_schema.py  server.py
mochi/auth/: __init__.py  models.py  openai_codex.py  store.py
mochi/backends/: __init__.py  base.py  gguf.py  local_models.py  (+14 more)
tests/: __init__.py  conftest.py  test_agent_run_operator_endpoints.py  test_agent_run_packages.py  test_api_chat_attachments.py  test_api_chat_context.py  test_api_chat_models.py  test_api_file_ops.py  test_api_filesystem.py  test_api_projects.py  test_api_projects_chat_resolution.py  test_api_runtime.py  test_api_runtime_detached_exec_recovery.py  test_api_server_lifecycle.py  test_api_sessions_settings.py  test_api_skills.py  test_api_workspace.py  test_backends.py  test_calculator.py  test_channels_phase45.py  test_collector_adapter.py  test_collector_contracts.py  test_compaction.py  test_config.py  test_context_manager.py  test_context_token_estimation.py  test_datetime_tool.py  test_detached_exec_layout_metadata.py  test_discord_voice_runtime.py  test_discourse_topic_adapter.py  test_engine_learning_phase5.py  test_engine_phase2.py  test_engine_phase3.py  test_engine_voice_phase4.py  test_exec_runtime.py  test_exec_runtime_detached_recovery.py  test_exec_security.py  test_exec_tools.py  test_execute_code_and_mcp.py  test_gguf_backend_runtime.py  (+63 more)
web/: .eslintrc.json  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
(+427 files in other folders)
